Update CV, Timeline page and main page

--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -1,53 +1,37 @@
 <% @title = "Yura Voevodin" %>
 <%= render "layouts/header" %>
 
-<div class="row">
-    <div class="col-9 mx-auto">
-        <div class="alert alert-success d-flex align-items-center" role="alert">
-            <i class="bi bi-info-circle me-2"></i>
-            <div>Check out the new page - <%= link_to "Timeline", "timeline", class: "alert-link" %></div>
-        </div>
-    </div>    
-</div>
-
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row">
-        <div class="col">
-            <h1>👋 Hello! My name is Yura</h1>
-            <p class="fs-4">Experienced <code class="badge bg-dark text-wrap">software engineer<span class="blinking-cursor">|</span></code> with strong background in web technologies. Focused on creating products. Enthusiast and dreamer from Ukraine 🇺🇦</p>
-        </div>
-
+    <div class="row fs-5 p-3 bg-light border rounded-3">
         <div class="col-sm-2 mb-4">
             <%= image_pack_tag 'avatar.jpg', class: "img-thumbnail", alt: "Yura Voevodin" %>
         </div>
-    </div>
 
-    <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
-        <div class="container-fluid py-3 px-3">
-            <h4>😎 About</h4>
+        <div class="col">
+            <div class="container-fluid py-3 px-3">
+                <h4>Hi! I'm Yura Voevodin</h4>
 
-            <ul class="list-unstyled">
-                <li>I'm Yura Voevodin, from <a href="https://www.youtube.com/watch?v=qyMkAOd_Z9U" rel="nofollow" target="_blank" class="link-dark">Sumy, Ukraine</a> and I'm glad that you took a time to visit this <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank" class="link-dark">website</a></li>
+                <p>I have many years of programming experience, bachelorʼs degree in Computer Science</p>
 
-                <li>I work as <code class="prettyprint">Software Engineer</code> and write code on <code class="prettyprint">Swift</code>, mainly building an iOS applications</li>
-                
-                <li>I also use <a href="https://rubyonrails.org" rel="nofollow" target="_blank" class="link-dark">Ruby On Rails</a> framework for my <a href="/projects" rel="nofollow" target="_blank" class="link-dark">own projects</a></li>
-            </ul>
+                <p>I work as <code class="prettyprint">Software Engineer</code> and write code on <code class="prettyprint">Swift</code>, mainly building an iOS applications</p>
 
-            <p>Feel free to ask me any questions and follow me on <a href="https://www.instagram.com/voevodin.yura" rel="nofollow" target="_blank" class="link-dark">social media</a></p>
+                <p>I also use <a href="https://rubyonrails.org" rel="nofollow" target="_blank" class="link-dark">Ruby On Rails</a> framework for my <a href="/projects" rel="nofollow" target="_blank" class="link-dark">own projects</a></p>
+
+                <p>Feel free to ask me any questions and follow me on <a href="https://www.instagram.com/voevodin.yura" rel="nofollow" target="_blank" class="link-dark">social media</a></p>
+            </div>
         </div>
     </div>
 
     <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
         <div class="container-fluid py-3 px-3">
-            <h4>🚀 Experience</h4>
+            <h4>Experience</h4>
 
             <dl class="row mt-3">
-              <dt class="col-sm-3">2020 - now</dt>
+              <dt class="col-sm-3">2020 - 2022</dt>
               <dd class="col-sm-9">iOS Developer at <a href="https://www.clowder.com" rel="nofollow" target="_blank" class="link-info">Clowder</a></dd>
 
-              <dt class="col-sm-3">2020 - now</dt>
+              <dt class="col-sm-3">2020 - 2021</dt>
               <dd class="col-sm-9">iOS Developer at <a href="https://coachnow.io" rel="nofollow" target="_blank" class="link-info">CoachNow</a></dd>
 
               <dt class="col-sm-3">2016 - 2020</dt>
@@ -68,24 +52,29 @@
   </div>
 
   <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
-    <div class="container-fluid py-3 px-3">
-        <h4>🎓 Education</h4>
+    <div class="col">
+        <div class="row">
+            <h4>Skills and Technologies</h4>
 
-        <dl class="row mt-4">
-            <dt class="col-sm-3">2012</dt>
-            <dd class="col-sm-9">Bachelor of Computer Science at <a href="https://sumdu.edu.ua/int/en" rel="nofollow" target="_blank" class="link-dark">Sumy State University</a></dd>
-        </dl>
-
-        <dl class="row">
-            <dt class="col-sm-3">2009</dt>
-            <dd class="col-sm-9">Junior Specialist, Service of computer and intellectual systems and networks at <a href="https://kpt.sumdu.edu.ua" rel="nofollow" target="_blank" class="link-dark">Polytechnic College of Konotop Institute of the SSU</a></dd>
-        </dl>
+            <p><span class="badge rounded-pill bg-dark">Git</span>
+                <span class="badge rounded-pill bg-dark">OOP</span>
+                <span class="badge rounded-pill bg-dark">Swift</span>
+                <span class="badge rounded-pill bg-dark">MVC</span>
+                <span class="badge rounded-pill bg-dark">UIKit</span>
+                <span class="badge rounded-pill bg-dark">Autolayout</span>
+                <span class="badge rounded-pill bg-dark">SwiftUI</span>
+                <span class="badge rounded-pill bg-dark">CoreData</span>
+                <span class="badge rounded-pill bg-dark">REST API</span>
+                <span class="badge rounded-pill bg-dark">TestFlight</span>
+                <span class="badge rounded-pill bg-dark">In-App Purchase</span>
+            </p>
+        </div>
     </div>
 </div>
 
 <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
     <div class="container-fluid py-3 px-3">
-        <h4>✉️ Contacts</h4>
+        <h4>Contacts</h4>
 
         <ul class="list-unstyled">
             <li>Github <a href="https://github.com/yura-voevodin" rel="nofollow" target="_blank" class="link-info">yura-voevodin</a></li>
@@ -96,6 +85,8 @@
             <li>Telegram <a href="https://t.me/voevodin_yura" rel="nofollow" target="_blank" class="link-info">@voevodin_yura</a></li>
             <li>Upwork <a href="https://www.upwork.com/freelancers/%7E01f49c60721b71f48b" rel="nofollow" target="_blank" class="link-info">Yura V.</a></li>
         </ul>
+
+        <p><a href="/cv_yura_voevodin.pdf" class="btn btn-outline-warning" target="_blank"><i class="bi bi-arrow-down-circle"></i> Download my CV</a></p>
     </div>
 </div>
 
