--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -3,29 +3,25 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row">
-        <div class="col">
-            <h1>👋 Привіт! Мене звати Юра</h1>
-            <p class="fs-4">Досвідчений <code class="badge bg-dark text-wrap">розробник програмного забезпечення<span class="blinking-cursor">|</span></code> зі знаннями в області веб-технологій. Ентузіаст та мрійник з України 🇺🇦</p>
-        </div>
-
+    <div class="row fs-5 p-3 bg-light border rounded-3">
         <div class="col-sm-2 mb-4">
             <%= image_pack_tag 'avatar.jpg', class: "img-thumbnail", alt: "Юра Воєводін" %>
         </div>
-    </div>
 
-    <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
-        <div class="container-fluid py-3 px-3">
+        <div class="col">
 
-            <ul class="list-unstyled">
-                <li>Я Юра Воєводін, з міста <a href="https://www.youtube.com/watch?v=qyMkAOd_Z9U" rel="nofollow" target="_blank" class="link-dark">Суми, Україна</a>. Я радий, що ви знайшли час, щоб відвідати цей <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank" class="link-dark">сайт</a></li>
+            <div class="container-fluid py-3 px-3">
 
-                <li>Я займаюся <code class="prettyprint">розробкою програмного забезпечення</code> та пишу код на мові програмування <code class="prettyprint">Swift</code>, в основному створюю додатки для iOS</li>
-                
-                <li>Також я використовую фреймворк <a href="https://rubyonrails.org" rel="nofollow" target="_blank" class="link-dark">Ruby On Rails</a> для <a href="/projects" rel="nofollow" target="_blank" class="link-dark">власних проєктів</a></li>
-            </ul>
+                <ul class="list-unstyled">
+                    <li>Я Юра Воєводін, з міста <a href="https://www.youtube.com/watch?v=qyMkAOd_Z9U" rel="nofollow" target="_blank" class="link-dark">Суми, Україна</a>. Я радий, що ви знайшли час, щоб відвідати цей <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank" class="link-dark">сайт</a></li>
 
-            <p>Задавайте мені будь-які питання та стежте за мною в <a href="https://www.instagram.com/voevodin.yura" rel="nofollow" target="_blank" class="link-dark">соціальних мережах</a></p>
+                    <li>Я займаюся <code class="prettyprint">розробкою програмного забезпечення</code> та пишу код на мові програмування <code class="prettyprint">Swift</code>, в основному створюю додатки для iOS</li>
+
+                    <li>Також я використовую фреймворк <a href="https://rubyonrails.org" rel="nofollow" target="_blank" class="link-dark">Ruby On Rails</a> для <a href="/projects" rel="nofollow" target="_blank" class="link-dark">власних проєктів</a></li>
+                </ul>
+
+                <p>Задавайте мені будь-які питання та стежте за мною в <a href="https://www.instagram.com/voevodin.yura" rel="nofollow" target="_blank" class="link-dark">соціальних мережах</a></p>
+            </div>
         </div>
     </div>
 
@@ -34,10 +30,10 @@
             <h4>🚀 Досвід</h4>
 
             <dl class="row mt-3">
-              <dt class="col-sm-3">2020 - до сьогодні</dt>
+              <dt class="col-sm-3">2020 - 2022</dt>
               <dd class="col-sm-9">iOS Developer, <a href="https://www.clowder.com" rel="nofollow" target="_blank" class="link-info">Clowder</a></dd>
 
-              <dt class="col-sm-3">2020 - до сьогодні</dt>
+              <dt class="col-sm-3">2020 - 2021</dt>
               <dd class="col-sm-9">iOS Developer, <a href="https://coachnow.io" rel="nofollow" target="_blank" class="link-info">CoachNow</a></dd>
 
               <dt class="col-sm-3">2016 - 2020</dt>
