--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
             <%= link_to root_url, rel: 'nofollow', class: "nav-link #{ is_active('main')}" do %>
             <i class="bi bi-house-fill"></i>
             <% end %>
-            <li class="nav-item"><%= link_to "Projects", "projects", class: "nav-link #{ is_active('projects')}" %></li>
+            <li class="nav-item"><%= link_to "Timeline", "timeline", class: "nav-link #{ is_active('timeline')}" %></li>
             <li class="nav-item"><%= link_to "Personal", "personal", class: "nav-link #{ is_active('personal')}" %></li>
         </ul>
     </header>
