Update "Experience" section, "Skills and Technologies" section. Update "Timeline"

--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -33,11 +33,12 @@
                 <div class="fs-6 fw-light mt-2 px-3">
                     <i>Role and responsibilities:</i>
                     <ul class="fs-6 fw-light">
-                        <li>Create copies (apps) of the <span class="fw-bold">Core</span> product and enable/disable product modules</li>
+                        <li>Create clones (copies) of the <span class="fw-bold">Core</span> product</li>
+                        <li>Add customizations to the clones and enable/disable product modules</li>
                         <li>Integrate user profile with custom fields to the clones of the <span class="fw-bold">Core</span> product</li>
                         <li>Work with Git by <code>GitFlow</code> methodology, resolve merge conflicts</li>
-                        <li>Support existing apps and update to the latest <span class="fw-bold">Core</span> version</li>
-                        <li>Create proposals and make changes in the <span class="fw-bold">Core</span> product</li>
+                        <li>Support existing apps and update to the latest version of the <span class="fw-bold">Core</span> product</li>
+                        <li>Create proposals and make changes in the <span class="fw-bold">Core</span></li>
                     </ul>
                 </div>
             </dd>
@@ -50,9 +51,10 @@
                 <div class="fs-6 fw-light px-3">
                     <i>Role and responsibilities:</i>
                     <ul class="fs-6 fw-light">
-                        <li>Make code reviews</li>
-                        <li>Publish new versions of the app to the <span class="fw-bold">TestFlight</span> for internal testing and to the <span class="fw-bold">App Store</span></li>
                         <li>Rewrite code from <code>Objective-C</code> to <code>Swift</code></li>
+                        <li>Make code reviews</li>
+                        <li>Publish new versions of the app to the <span class="fw-bold">TestFlight</span> for internal testing</li>
+                        <li>Publish new releases of the app to the <span class="fw-bold">App Store</span></li>
                         <li>Implement screen recording with <code>ReplayKit</code> framework</li>
                         <li>Implement "pinned posts" feature</li>
                         <li>Make improvement and fixes</li>
@@ -66,7 +68,7 @@
                 <div class="fs-6 fw-light px-3">
                     <i>Role and responsibilities:</i>
                     <ul class="fs-6 fw-light">
-                        <li>Design an architecture and create an apps from scratch</li>
+                        <li>Create apps from scratch and design apps architecture</li>
                         <li>Create user interface with <span class="fw-bold">Storyboards</span> and <span class="fw-bold">XIB</span> files</li>
                         <li>Use <code>UIKit</code> and create <span class="fw-bold">custom UI</span> components</li>
                         <li>Design a database architecture and use <code>Core Data</code> framework</li>
