Add "Buy me a coffee" button to the "Bootstrap 5 + Timeline" page

--- a/app/views/pages/bootstrap_timeline.html.erb
+++ b/app/views/pages/bootstrap_timeline.html.erb
@@ -23,6 +23,13 @@
         <div class="col-md-6"><img src="<%= image_path('bootstrap_timeline/Timeline.png') %>" class="img-fluid"/></div>
     </div>
 
+    <div class="row my-5 text-center">
+        <span class="fst-italic">If you'd like to say thanks, I'd appreciate a coffee :)</span>
+        <div class="my-2">
+            <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="voevodin" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+        </div>
+    </div>
+
     <div class="row mt-5">
         <div class="fs-3">Code example</div>
         <div class="mt-2"><img src="<%= image_path('bootstrap_timeline/Code_example.png') %>" class="img-fluid rounded"/></div>
