"Timeline" page - add link to the "Bootstrap 5 + Timeline" page

--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -3,6 +3,10 @@
 
 <div class="col-9 mx-auto py-md-3">
 
+    <div class="text-end">
+        <%= link_to "Timeline source code", "pages/bootstrap_5_timeline", class: "link-secondary", target: "_blank" %>
+    </div>
+
     <div class="py-2 mb-4">
 
         <% @timeline.each_with_index do |event, index| %>
