"Bootstrap 5 + Timeline" page
Add link to GitHub repository with Rails version of the Timeline

--- a/app/views/pages/bootstrap_timeline.html.erb
+++ b/app/views/pages/bootstrap_timeline.html.erb
@@ -19,6 +19,10 @@
                 <a href="/bootstrap_5_timeline.zip" rel="nofollow" class="btn btn-primary mt-2"><i class="bi bi-arrow-down-circle"></i> Download example</a>
                 <a href="/pages/tesla_timeline" rel="nofollow" class="btn btn-success mt-2">Live demo</a>
             </div>
+            <div class="py-3"></div>
+            <hr>
+            <p><span class="fs-6 badge rounded-pill bg-warning text-dark">Advanced</span></p>
+            <p class="fs-6"><a href="https://github.com/yura-voevodin/rails_bootstrap_timeline" target="_blank">GitHub repository</a> with more advanced version, made on <a href="https://rubyonrails.org" target="_blank">Rails 7</a> with data source as <code>JSON</code> file. </p>
         </div>
         <div class="col-md-6"><img src="<%= image_path('bootstrap_timeline/Timeline.png') %>" class="img-fluid"/></div>
     </div>
