Add "Support Ukraine" link

--- a/app/views/main/timeline.html.erb
+++ b/app/views/main/timeline.html.erb
@@ -1,3 +1,5 @@
+<% meta_tag :description, "Software Engineer (iOS, Swift) / Father from Ukraine" %>
+<% meta_tag :keywords, "iOS, Developer, Engineer, Blog, Ukraine" %>
 <% @title = "Yura Voevodin - Timeline" %>
 <%= render "layouts/header" %>
 
