--- a/app/views/pages/bootstrap_timeline.html.erb
+++ b/app/views/pages/bootstrap_timeline.html.erb
@@ -1,3 +1,5 @@
+<% meta_tag :description, "Bootstrap 5 HTML Timeline" %>
+<% meta_tag :keywords, "Timeline, Bootstrap 5, HTML, CSS, Rails 7" %>
 <div class="container">
   <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
