--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -1,7 +1,17 @@
+<% meta_tag :description, "Software Engineer (iOS, Swift) / Father from Ukraine" %>
+<% meta_tag :keywords, "iOS, Developer, Engineer, Blog, Ukraine" %>
 <% @title = "Yura Voevodin" %>
 <%= render "layouts/header" %>
 
 <div class="col-9 mx-auto py-md-5">
+
+    <div class="row">
+        <div class="fs-3 mb-4">
+            <span class="badge rounded-pill" style="background-color: yellow;">
+                <a href="https://uahelp.monobank.ua" class="link-primary" target="_blank">Support Ukraine</a>
+            </span>
+        </div>
+    </div>
 
     <div class="row fs-5 p-3 bg-light border rounded-3">
         <div class="col-sm-2 mb-4">
@@ -10,9 +20,9 @@
 
         <div class="col">
             <div class="container-fluid py-3 px-3">
-                <h4>Hi! I'm Yura Voevodin</h4>
+                <h4>Hi! I'm Yura Voevodin, from Ukraine 🇺🇦</h4>
 
-                <p>I have many years of programming experience, bachelorʼs degree in Computer Science</p>
+                <p>I have many years of programming experience, bachelor's degree in Computer Science</p>
 
                 <p>I work as <code class="prettyprint">Software Engineer</code> and write code on <code class="prettyprint">Swift</code>, mainly building an iOS applications</p>
 
