Update the Timeline

--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -38,6 +38,18 @@
             <h4>Experience</h4>
 
             <dl class="row mt-3">
+
+                <dt class="col-sm-3">2022 - now</dt>
+                <dd class="col-sm-9">Software Engineer (iOS, Swift) at <a href="https://create.vista.com" rel="nofollow" target="_blank" class="link-info">VistaCreate</a>
+                    <div class="fs-6 fw-light mt-2 px-3">
+                        <i>Role and responsibilities:</i>
+                        <ul class="fs-6 fw-light">
+                            <li>Make completely new app Home screen</li>
+                            <li>Write unit tests for cover app business logic</li>
+                        </ul>
+                    </div>
+                </dd>
+
               <dt class="col-sm-3">2020 - 2022</dt>
               <dd class="col-sm-9">Software Engineer (iOS, Swift) at <a href="https://www.clowder.com" rel="nofollow" target="_blank" class="link-info">Clowder</a>
                 <div class="fs-6 fw-light mt-2 px-3">
