--- a/app/views/layouts/_header_ua.html.erb
+++ b/app/views/layouts/_header_ua.html.erb
@@ -4,7 +4,7 @@
         <%= link_to "/ua", rel: 'nofollow', class: "nav-link #{ is_active('index')}" do %>
         <i class="bi bi-house-fill"></i>
         <% end %>
-        <li class="nav-item"><%= link_to "Проєкти", "/ua/projects", class: "nav-link #{ is_active('projects')}" %></li>
+        <li class="nav-item"><%= link_to "Timeline", "timeline", class: "nav-link #{ is_active('timeline')}" %></li>
         <li class="nav-item"><%= link_to "Особисте", "/ua/personal", class: "nav-link #{ is_active('personal')}" %></li>
     </ul>
 </header>
