--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -9,18 +9,14 @@
         </div>
 
         <div class="col">
-
             <div class="container-fluid py-3 px-3">
+                <h4>Привіт! Я Юра Воєводін, з України 🇺🇦</h4>
 
-                <ul class="list-unstyled">
-                    <li>Я Юра Воєводін, з міста <a href="https://www.youtube.com/watch?v=qyMkAOd_Z9U" rel="nofollow" target="_blank" class="link-dark">Суми, Україна</a>. Я радий, що ви знайшли час, щоб відвідати цей <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank" class="link-dark">сайт</a></li>
+                <p>Маю багаторічний досвід програмування, ступінь бакалавра комп’ютерних наук</p>
 
-                    <li>Я займаюся <code class="prettyprint">розробкою програмного забезпечення</code> та пишу код на мові програмування <code class="prettyprint">Swift</code>, в основному створюю додатки для iOS</li>
+                <p>Я займаюся <code class="prettyprint">розробкою програмного забезпечення</code> та пишу код мовою програмування <code class="prettyprint">Swift</code>, в основному створюю додатки для iOS</p>
 
-                    <li>Також я використовую фреймворк <a href="https://rubyonrails.org" rel="nofollow" target="_blank" class="link-dark">Ruby On Rails</a> для <a href="/projects" rel="nofollow" target="_blank" class="link-dark">власних проєктів</a></li>
-                </ul>
-
-                <p>Задавайте мені будь-які питання та стежте за мною в <a href="https://www.instagram.com/voevodin.yura" rel="nofollow" target="_blank" class="link-dark">соціальних мережах</a></p>
+                <p>Також я використовую фреймворк <a href="https://rubyonrails.org" rel="nofollow" target="_blank" class="link-dark">Ruby On Rails</a> для <a href="/projects" rel="nofollow" target="_blank" class="link-dark">власних проєктів</a></p>
             </div>
         </div>
     </div>
@@ -30,11 +26,15 @@
             <h4>🚀 Досвід</h4>
 
             <dl class="row mt-3">
+
+                <dt class="col-sm-3">2022 - now</dt>
+                <dd class="col-sm-9">Software Engineer (iOS, Swift), <a href="https://create.vista.com" rel="nofollow" target="_blank" class="link-info">VistaCreate</a></dd>
+
               <dt class="col-sm-3">2020 - 2022</dt>
-              <dd class="col-sm-9">iOS Developer, <a href="https://www.clowder.com" rel="nofollow" target="_blank" class="link-info">Clowder</a></dd>
+              <dd class="col-sm-9">Software Engineer (iOS, Swift), <a href="https://www.clowder.com" rel="nofollow" target="_blank" class="link-info">Clowder</a></dd>
 
               <dt class="col-sm-3">2020 - 2021</dt>
-              <dd class="col-sm-9">iOS Developer, <a href="https://coachnow.io" rel="nofollow" target="_blank" class="link-info">CoachNow</a></dd>
+              <dd class="col-sm-9">Software Engineer (iOS, Swift), <a href="https://coachnow.io" rel="nofollow" target="_blank" class="link-info">CoachNow</a></dd>
 
               <dt class="col-sm-3">2016 - 2020</dt>
               <dd class="col-sm-9">Розробник застосунків для iOS, iPadOS та macOS в <a href="https://www.appdev.academy" rel="nofollow" target="_blank" class="link-info">App Dev Academy</a></dd>
@@ -55,38 +55,6 @@
 
   <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
     <div class="container-fluid py-3 px-3">
-        <h4>🎓 Освіта</h4>
-
-        <dl class="row mt-4">
-            <dt class="col-sm-3">2012</dt>
-            <dd class="col-sm-9">Бакалавр, Інформатика,  <a href="https://sumdu.edu.ua" rel="nofollow" target="_blank" class="link-dark">Сумський державний університет</a></dd>
-        </dl>
-
-        <dl class="row">
-            <dt class="col-sm-3">2009</dt>
-            <dd class="col-sm-9">Молодший спеціаліст, Обслуговування комп'ютерних та інтелектуальних систем і мереж, <a href="https://kpt.sumdu.edu.ua" rel="nofollow" target="_blank" class="link-dark">Політехнічний технікум Конотопського інституту СумДУ</a></dd>
-        </dl>
-    </div>
-</div>
-
-<div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
-    <div class="container-fluid py-3 px-3">
-        <h4>✉️ Контакти</h4>
-
-        <ul class="list-unstyled">
-            <li>Github <a href="https://github.com/yura-voevodin" rel="nofollow" target="_blank" class="link-info">yura-voevodin</a></li>
-            <li>Twitter <a href="https://twitter.com/voevodin_yura" rel="nofollow" target="_blank" class="link-info">@voevodin_yura</a></li>
-            <li>LinkedIn <a href="https://www.linkedin.com/in/yurivoevodin" rel="nofollow" target="_blank" class="link-info">yurivoevodin</a></li>
-            <li>Instagram <a href="https://www.instagram.com/voevodin.yura" rel="nofollow" target="_blank" class="link-info">@voevodin.yura</a></li>
-            <li>Facebook <a href="https://www.facebook.com/yura.voevodin" rel="nofollow" target="_blank" class="link-info">yura.voevodin</a></li>
-            <li>Telegram <a href="https://t.me/voevodin_yura" rel="nofollow" target="_blank" class="link-info">@voevodin_yura</a></li>
-            <li>Upwork <a href="https://www.upwork.com/freelancers/%7E01f49c60721b71f48b" rel="nofollow" target="_blank" class="link-info">Yura V.</a></li>
-        </ul>
-    </div>
-</div>
-
-<div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
-    <div class="container-fluid py-3 px-3">
         <h4>✏️ Блог</h4>
         <p>Читайте мої статті для натхнення 😉</p>
 
@@ -95,8 +63,23 @@
               <i class="bi bi-arrow-right-circle text-muted"></i>
               <a href="/ua/blog/feature">Привіт із майбутнього!</a>
           </li>
-      </div>
+      </ul>
   </div>
+</div>
 
-  <%= render "layouts/footer" %>
+<% if !contacts_list.blank? %>
+<div class="row fs-5 p-3 mt-5 text-white bg-dark border rounded-3">
+    <div class="col">
+        <div class="row">
+            <div><% for item in contacts_list %>
+                <span class="mx-2"><a href="<%= item['url'] %>" rel="nofollow" target="_blank" class="link-light"><i class="bi <%= item['icon'] %> fs-4"></i></a></span>
+                <% end %>
+            </div>
+            <div class="my-3"><a href="/cv_yura_voevodin.pdf" class="btn btn-outline-warning" target="_blank"><i class="bi bi-arrow-down-circle"></i> Download CV</a></div>
+        </div>
+    </div>
+</div>
+<% end %>
+
+<%= render "layouts/footer" %>
 </div>
