Update avatar and social networks

--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -5,7 +5,7 @@
 
     <div class="row fs-5 p-3 bg-light border rounded-3">
         <div class="col-sm-2 mb-4">
-            <%= image_pack_tag 'avatar.jpg', class: "img-thumbnail", alt: "Юра Воєводін" %>
+            <%= image_pack_tag 'avatar.jpeg', class: "img-thumbnail", alt: "Юра Воєводін" %>
         </div>
 
         <div class="col">
