Add link to the main page
"How to improve mobile data usage"

--- a/app/views/ua/blog/low-data-mode.html.erb
+++ b/app/views/ua/blog/low-data-mode.html.erb
@@ -13,6 +13,7 @@
 
     <div class="row">
         <h1>Як оптимізувати використання мобільного Інтернет</h1>
+        <p class="text-muted">11 грудня, 2022 року</p>
     </div>
 
     <div class="row mt-4">
