--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -61,6 +61,10 @@
         <ul class="list-unstyled">
             <li>
               <i class="bi bi-arrow-right-circle text-muted"></i>
+              <a href="/ua/blog/low-data-mode">Як оптимізувати використання мобільного Інтернет</a>
+          </li>
+            <li>
+              <i class="bi bi-arrow-right-circle text-muted"></i>
               <a href="/ua/blog/feature">Привіт із майбутнього!</a>
           </li>
       </ul>
