--- a/app/views/ua/blog/low-data-mode.html.erb
+++ b/app/views/ua/blog/low-data-mode.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 
-<div class="col-8 mx-auto p-3 py-md-5">
+<div class="col-10 mx-auto py-md-5">
 
     <div class="row">
         <h1>Як оптимізувати використання мобільного Інтернет</h1>
