Update to Bootstrap 5.3.0 with Dark Theme

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="ua">
-<html>
+<html lang="ua" data-bs-theme="dark">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="<%= yield_meta_tag(:description, 'Yura Voevodin Personal Website') %>" />
-	<meta name="keywords" content="<%= yield_meta_tag(:keywords, 'iOS,iPadOS,macOS,tvOS,iPhone,iPad,iMac,MacBook,Developer,Swift') %>" />
+  <meta name="keywords" content="<%= yield_meta_tag(:keywords, 'iOS,iPadOS,macOS,tvOS,iPhone,iPad,iMac,MacBook,Developer,Swift') %>" />
 
   <!-- For new browsers - multisize ico  -->
   <link rel="icon" type="image/x-icon" sizes="16x16 32x32" href="favicon.ico">
