--- a/app/views/main/personal.html.erb
+++ b/app/views/main/personal.html.erb
@@ -5,7 +5,7 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row fs-5 p-3 bg-light border rounded-3">
+    <div class="row fs-5 p-3 bg-light-subtle rounded-3">
         <div class="col">
 
             <h4>📷 Some of my favorite photos</h4>
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3" >
+    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
+    <div class="row fs-5 p-3 mt-5 bg-primary-subtle rounded-3">
         <div class="col">
             <h4>📖 I'm reading</h4>
             <ul class="list-unstyled">
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3" >
+    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
