--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -5,7 +5,7 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row fs-5 p-3 bg-light border rounded-3">
+    <div class="row fs-5 p-3 bg-primary-subtle rounded-3">
 
         <div class="col-sm-2 mb-2" style="max-height: 100px;">
             <%= image_pack_tag 'my-university.png', class: "img-thumbnail h-100" %>
@@ -17,17 +17,16 @@
             <ul class="list-unstyled">
                 <li class="mb-2"><a href="https://my-university.com.ua" rel="nofollow" target="_blank">my-university.com.ua</a> - web service and API on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework</li>
                 <li class="mb-2"><a href="https://itunes.apple.com/ua/app/university-schedule/id1440425058" rel="nofollow" target="_blank">iOS app</a> with schedule for universities</li>
-                <li class="mb-2"><a href="https://play.google.com/store/apps/details?id=ua.com.myuniversity" rel="nofollow" target="_blank">Android app</a> with schedule for universities</li>
             </ul>
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
+    <div class="row fs-5 p-3 mt-5 bg-primary-subtle rounded-3">
         <div class="container-fluid py-3 px-3">
             <h4>Personal  website</h4>
 
             <ul class="list-unstyled">
-                <li><a href="https://voevodin-yura.com" rel="nofollow" target="_blank" class="link-info">voevodin-yura.com</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank" class="link-info">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank" class="link-info">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank" class="link-info"><i class="bi bi-github"></i></a></li>
+                <li><a href="https://voevodin-yura.com" rel="nofollow" target="_blank">voevodin-yura.com</a> - website on <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Rails</a> framework and <a href="https://getbootstrap.com" rel="nofollow" target="_blank">Bootstrap</a> toolkit <a href="https://github.com/yura-voevodin/blog-rails" rel="nofollow" target="_blank"><i class="bi bi-github"></i></a></li>
             </ul>
         </div>
     </div>
