Replace image_pack_tag with image_tag

--- a/app/views/main/personal.html.erb
+++ b/app/views/main/personal.html.erb
@@ -15,7 +15,7 @@
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
 
                     <% slice.each do |photo| %>
-                    <%= image_pack_tag photo['name'], class: "w-100 shadow-1-strong rounded mb-4" %>
+                    <%= image_tag photo['name'], class: "w-100 shadow-1-strong rounded mb-4" %>
                     <% end %>
 
                 </div>
@@ -36,7 +36,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card my-3 bg-dark border-dark">
                         <div class="card-thumbnail">
-                            <%= image_pack_tag movie['image'], class: "rounded img-fluid" %>
+                            <%= image_tag movie['image'], class: "rounded img-fluid" %>
                         </div>
                         <div class="card-body">
                             <div class="card-title fw-light">
@@ -76,7 +76,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card my-3 bg-dark border-dark">
                         <div class="card-thumbnail">
-                            <%= image_pack_tag game['image'], class: "rounded img-fluid" %>
+                            <%= image_tag game['image'], class: "rounded img-fluid" %>
                         </div>
                         <div class="card-body">
                             <div class="card-title fw-light">
