--- a/app/views/ua/blog/low-data-mode.html.erb
+++ b/app/views/ua/blog/low-data-mode.html.erb
@@ -19,7 +19,7 @@
     <div class="row mt-4">
         <h2>iOS (16.1)</h2>
         <p>Параметри → Стільникові дані → Опції даних → Вмикаємо «Режим економії даних»</p>
-        <p><%= image_pack_tag 'low-data-mode/iOS low data mode.png', class: "img-fluid" %></p>
+        <p><%= image_tag 'low-data-mode/iOS low data mode.png', class: "img-fluid" %></p>
     </div>
 
     <hr>
@@ -36,7 +36,7 @@
                 <li>«Через мобільні мережу» → Вимикаємо «Автозавантаження медіа»</li>
             </ol>
         </p>
-        <p><%= image_pack_tag 'low-data-mode/telegram low data mode.png', class: "img-fluid" %></p>
+        <p><%= image_tag 'low-data-mode/telegram low data mode.png', class: "img-fluid" %></p>
     </div>
 
     <hr>
@@ -44,7 +44,7 @@
     <div class="row mt-4">
         <h2>Instagram</h2>
         <p>Профіль → Налаштування → Обліковий запис → Використання даних → Вмикаємо «Використовуйте менше мобільних даних»</p>
-        <p><%= image_pack_tag 'low-data-mode/instagram low data mode.png', class: "img-fluid" %></p>
+        <p><%= image_tag 'low-data-mode/instagram low data mode.png', class: "img-fluid" %></p>
     </div>
 
     <hr>
@@ -52,7 +52,7 @@
     <div class="row mt-4">
         <h2>Twitter</h2>
         <p>«Налаштування та конфіденційність» → «Спеціальні можливості, відображення та мови» → «Використання даних» → Вмикаємо «Економія трафіку»</p>
-        <p><%= image_pack_tag 'low-data-mode/twitter low data mode.png', class: "img-fluid" %></p>
+        <p><%= image_tag 'low-data-mode/twitter low data mode.png', class: "img-fluid" %></p>
     </div>
     
     <%= render "layouts/footer" %>
