--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -3,9 +3,9 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row fs-5 p-3 bg-light border rounded-3">
+    <div class="row fs-5 p-3 bg-primary-subtle rounded-3">
         <div class="col-sm-2 mb-4">
-            <%= image_pack_tag 'avatar.jpeg', class: "img-thumbnail", alt: "Юра Воєводін" %>
+            <%= image_tag 'blue square.jpeg', class: "img-thumbnail", alt: "Юра Воєводін" %>
         </div>
 
         <div class="col">
@@ -16,44 +16,44 @@
 
                 <p>Я займаюся <code class="prettyprint">розробкою програмного забезпечення</code> та пишу код мовою програмування <code class="prettyprint">Swift</code>, в основному створюю додатки для iOS</p>
 
-                <p>Також я використовую фреймворк <a href="https://rubyonrails.org" rel="nofollow" target="_blank" class="link-dark">Ruby On Rails</a> для <a href="/projects" rel="nofollow" target="_blank" class="link-dark">власних проєктів</a></p>
+                <p>Також я використовую фреймворк <a href="https://rubyonrails.org" rel="nofollow" target="_blank">Ruby On Rails</a> для <a href="/projects" rel="nofollow" target="_blank">власних проєктів</a></p>
             </div>
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3">
+    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3">
         <div class="container-fluid py-3 px-3">
             <h4>🚀 Досвід</h4>
 
             <dl class="row mt-3">
 
                 <dt class="col-sm-3">2022 - now</dt>
-                <dd class="col-sm-9">Software Engineer (iOS, Swift), <a href="https://create.vista.com" rel="nofollow" target="_blank" class="link-info">VistaCreate</a></dd>
+                <dd class="col-sm-9">Software Engineer (iOS, Swift), <a href="https://create.vista.com" rel="nofollow" target="_blank">VistaCreate</a></dd>
 
               <dt class="col-sm-3">2020 - 2022</dt>
-              <dd class="col-sm-9">Software Engineer (iOS, Swift), <a href="https://www.clowder.com" rel="nofollow" target="_blank" class="link-info">Clowder</a></dd>
+              <dd class="col-sm-9">Software Engineer (iOS, Swift), <a href="https://www.clowder.com" rel="nofollow" target="_blank">Clowder</a></dd>
 
               <dt class="col-sm-3">2020 - 2021</dt>
-              <dd class="col-sm-9">Software Engineer (iOS, Swift), <a href="https://coachnow.io" rel="nofollow" target="_blank" class="link-info">CoachNow</a></dd>
+              <dd class="col-sm-9">Software Engineer (iOS, Swift), <a href="https://coachnow.io" rel="nofollow" target="_blank">CoachNow</a></dd>
 
               <dt class="col-sm-3">2016 - 2020</dt>
-              <dd class="col-sm-9">Розробник застосунків для iOS, iPadOS та macOS в <a href="https://www.appdev.academy" rel="nofollow" target="_blank" class="link-info">App Dev Academy</a></dd>
+              <dd class="col-sm-9">Розробник застосунків для iOS, iPadOS та macOS в <a href="https://www.appdev.academy" rel="nofollow" target="_blank">App Dev Academy</a></dd>
 
               <hr>
 
               <dt class="col-sm-3">2012 - 2016</dt>
-              <dd class="col-sm-9">PHP розробник в <a href="https://bvblogic.com" rel="nofollow" target="_blank" class="link-info">bvblogic</a></dd>
+              <dd class="col-sm-9">PHP розробник в <a href="https://bvblogic.com" rel="nofollow" target="_blank">bvblogic</a></dd>
 
               <dt class="col-sm-3">2012 - 2013</dt>
-              <dd class="col-sm-9">Старший лаборант в <a href="https://dl.sumdu.edu.ua" rel="nofollow" target="_blank" class="link-info">Лабораторія дистанційного навчання Сумського державного університету</a></dd>
+              <dd class="col-sm-9">Старший лаборант в <a href="https://dl.sumdu.edu.ua" rel="nofollow" target="_blank">Лабораторія дистанційного навчання Сумського державного університету</a></dd>
 
               <dt class="col-sm-3">2007 - 2008</dt>
-              <dd class="col-sm-9">Лаборант в <a href="https://kpt.sumdu.edu.ua" rel="nofollow" target="_blank" class="link-info">Політехнічний технікум Конотопського інституту СумДУ</a></dd>
+              <dd class="col-sm-9">Лаборант в <a href="https://kpt.sumdu.edu.ua" rel="nofollow" target="_blank">Політехнічний технікум Конотопського інституту СумДУ</a></dd>
           </dl>
       </div>
   </div>
 
-  <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
+  <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3">
     <div class="container-fluid py-3 px-3">
         <h4>✏️ Блог</h4>
         <p>Читайте мої статті для натхнення 😉</p>
@@ -72,7 +72,7 @@
 </div>
 
 <% if !contacts_list.blank? %>
-<div class="row fs-5 p-3 mt-5 text-white bg-dark border rounded-3">
+<div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3">
     <div class="col">
         <div class="row">
             <div><% for item in contacts_list %>
