--- a/app/views/ua/personal.html.erb
+++ b/app/views/ua/personal.html.erb
@@ -3,7 +3,7 @@
 
 <div class="col-9 mx-auto py-md-5">
 
-    <div class="row fs-5 p-3 bg-light border rounded-3">
+    <div class="row fs-5 p-3 bg-light-subtle rounded-3">
         <div class="col">
 
             <h4>📷 Деякі з моїх улюблених фото</h4>
@@ -13,7 +13,7 @@
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
 
                     <% slice.each do |photo| %>
-                    <%= image_pack_tag photo['name'], class: "w-100 shadow-1-strong rounded mb-4" %>
+                    <%= image_tag photo['name'], class: "w-100 shadow-1-strong rounded mb-4" %>
                     <% end %>
 
                 </div>
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3" >
+    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -34,7 +34,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card my-3 bg-dark border-dark">
                         <div class="card-thumbnail">
-                            <%= image_pack_tag movie['image'], class: "rounded img-fluid" %>
+                            <%= image_tag movie['image'], class: "rounded img-fluid" %>
                         </div>
                         <div class="card-body">
                             <div class="card-title fw-light">
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 bg-light border rounded-3">
+    <div class="row fs-5 p-3 mt-5 bg-primary-subtle rounded-3">
         <div class="col">
             <h4>📖 Я читаю</h4>
             <ul class="list-unstyled">
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 text-white bg-dark rounded-3" >
+    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -74,7 +74,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="card my-3 bg-dark border-dark">
                         <div class="card-thumbnail">
-                            <%= image_pack_tag game['image'], class: "rounded img-fluid" %>
+                            <%= image_tag game['image'], class: "rounded img-fluid" %>
                         </div>
                         <div class="card-body">
                             <div class="card-title fw-light">
