--- a/app/views/ua/projects.html.erb
+++ b/app/views/ua/projects.html.erb
@@ -5,7 +5,7 @@
     <div class="row fs-5 p-3 bg-light border rounded-3">
 
         <div class="col-sm-2 mb-2" style="max-height: 100px;">
-            <%= image_pack_tag 'my-university.png', class: "img-thumbnail h-100" %>
+            <%= image_tag 'my-university.png', class: "img-thumbnail h-100" %>
         </div>
 
         <div class="col">
