Increase avatar size in UA version

--- a/app/views/ua/index.html.erb
+++ b/app/views/ua/index.html.erb
@@ -4,7 +4,7 @@
 <div class="col-9 mx-auto py-md-5">
 
     <div class="row fs-5 p-3 bg-primary-subtle rounded-3">
-        <div class="col-sm-2 mb-4">
+        <div class="col-sm-3 mt-3">
             <%= image_tag 'blue square.jpeg', class: "img-thumbnail", alt: "Юра Воєводін" %>
         </div>
 
