--- a/app/views/main/main.html.erb
+++ b/app/views/main/main.html.erb
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3">
+    <div class="row fs-5 p-3 mt-5 bg-dark-subtle rounded-3">
         <div class="container-fluid py-3 px-3">
             <h4>Experience</h4>
 
@@ -118,7 +118,7 @@
     </div>
 
     <% if !skills_list.blank? %>
-    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3">
+    <div class="row fs-5 p-3 mt-5 bg-dark-subtle rounded-3">
         <div class="col">
             <div class="row">
                 <h4>Skills and Technologies</h4>
@@ -133,7 +133,7 @@
     <% end %>
 
     <% if !contacts_list.blank? %>
-    <div class="row fs-5 p-3 mt-5 bg-light-subtle rounded-3">
+    <div class="row fs-5 p-3 mt-5 bg-dark-subtle rounded-3">
         <div class="col">
             <div class="row">
                 <div><% for item in contacts_list %>
