--- a/app/views/ua/personal.html.erb
+++ b/app/views/ua/personal.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Юра Воєводін - Особисте" %>
+<% @title = "Юрій Воєводін - Особисте" %>
 <%= render "layouts/header_ua" %>
 
 <div class="col-9 mx-auto py-md-5">
